Update: Profile pic sizing and cropping fix
-made the profile pic in Post author details and Comment author to be cropped on the center horizontally

--- a/pastebook-client/src/components/post/Post.css
+++ b/pastebook-client/src/components/post/Post.css
@@ -25,6 +25,8 @@ div.post-author {
 }
 
 div.post-author-details {
+    height: 50px;
+    width: calc(100% - 90px);
     margin: 0 5px 0 5px;
 }
 
